--- a/_pages/MAE4300.md
+++ b/_pages/MAE4300.md
@@ -1,33 +1,367 @@
 ---
 layout: default
-title: MAE 4300 - Ethics
+title: MAE 4300 Ethics Portfolio
 ---
 
-# Ethics in Engineering
-**MAE 4300 - Fall 2024**
+# Engineering Ethics Portfolio
+**MAE 4300: Ethics in Engineering**
 
-## Course Overview
-MAE 4300 explores the ethical dimensions of engineering practice, examining the professional responsibilities of engineers in society. The course addresses critical questions about how engineers should balance technical excellence with social responsibility, environmental stewardship, and public safety.
+Sarah Grace Brown  
+NetID: seb353  
+Fall 2024
 
-## Key Topics Covered
-Throughout the semester, we explored fundamental ethical frameworks and their application to real-world engineering challenges. Topics included professional codes of conduct, risk assessment and communication, intellectual property rights, environmental ethics, and the engineer's role in sustainable development. We analyzed case studies ranging from historical engineering failures to contemporary challenges in emerging technologies like artificial intelligence and autonomous systems.
+---
 
-## Project Work
-The course emphasized practical application of ethical reasoning through project-based learning. Working in teams, we analyzed complex engineering scenarios that required balancing competing stakeholder interests, evaluating trade-offs between cost and safety, and considering the broader societal implications of technical decisions. These exercises developed skills in ethical decision-making that are essential for responsible engineering practice.
+## Table of Contents
+1. [Executive Summary](#executive-summary)
+2. [Case Study Analysis: Boeing 737 MAX MCAS System](#case-study-analysis)
+3. [Ethical Analysis Framework](#ethical-analysis-framework)
+4. [Practical Constraints on Ethical Decision-Making](#practical-constraints)
+5. [Ethical Resolutions and Justifications](#ethical-resolutions)
+6. [Lessons Learned and Professional Growth](#lessons-learned)
+7. [Conclusion](#conclusion)
 
-## Course Deliverables
+---
 
-### Weekly Assignments
-Regular assignments required analyzing ethical dimensions of current engineering news, applying ethical frameworks to case studies, and developing reasoned arguments for complex technical decisions. These exercises built proficiency in identifying ethical issues and articulating well-supported positions on controversial topics.
+## Executive Summary {#executive-summary}
 
-### Group Discussions
-Collaborative discussions examined diverse perspectives on engineering ethics, exploring how cultural context, professional roles, and personal values influence ethical decision-making. These sessions emphasized the importance of considering multiple viewpoints when addressing ethical challenges in engineering.
+This portfolio synthesizes my learning from MAE 4300: Ethics in Engineering through an in-depth analysis of the Boeing 737 MAX MCAS system failures. Through systematic examination of this case, I developed frameworks for identifying ethical issues, analyzing stakeholder impacts, and navigating the complex constraints that engineers face in professional practice.
 
-### Final Portfolio
-The course culminated in a comprehensive portfolio demonstrating growth in ethical reasoning and the ability to apply ethical frameworks to engineering practice. This portfolio synthesized learning from throughout the semester and reflected on how ethical considerations will inform future professional work.
+The Boeing 737 MAX case illustrates fundamental tensions in engineering ethics: the conflict between public safety and organizational pressures, the challenges of regulatory delegation, and the consequences when technical decisions are driven by competitive and financial considerations rather than safety imperatives. My analysis demonstrates how engineers must balance their professional obligations under ASME Canon 1 (holding paramount the safety, health, and welfare of the public) against organizational cultures that may prioritize schedule, cost, and market position.
 
-## Key Takeaways
-This course reinforced that ethical engineering practice extends beyond technical competence to encompass responsibility for public welfare, environmental sustainability, and social justice. Engineers must actively consider the broader implications of their work and commit to transparent communication about risks and limitations. The skills developed in this course are fundamental to fulfilling the professional obligations outlined in engineering codes of ethics and to earning public trust in the engineering profession.
+Key insights from this portfolio include the recognition that ethical engineering practice requires not just technical competence but also moral courage to raise safety concerns, transparency in communication with regulators and stakeholders, and systematic processes for identifying and mitigating risks. The analysis revealed how organizational culture, regulatory ambiguity, economic pressures, and information silos can create environments where individual engineers face significant barriers to upholding ethical standards.
 
-## Relevance to Career Goals
-As I pursue a career in robotics and autonomous systems, the ethical frameworks explored in MAE 4300 will be essential. Autonomous systems raise critical questions about safety, accountability, privacy, and the appropriate role of automation in society. The analytical tools and ethical reasoning skills developed in this course will help me navigate these challenges responsibly throughout my engineering career.
+As I pursue my career in robotics and autonomous systems, the analytical frameworks and ethical reasoning skills developed through this course will be essential. Autonomous systems raise similar questions about safety, accountability, transparency, and the appropriate role of automation in society. This portfolio represents both my growth in ethical reasoning and my commitment to responsible engineering practice throughout my professional career.
+
+---
+
+## Case Study Analysis: Boeing 737 MAX MCAS System {#case-study-analysis}
+
+The Boeing 737 MAX Maneuvering Characteristics Augmentation System (MCAS) represents one of the most significant aviation safety failures in recent history. Two catastrophic crashes—Lion Air Flight 610 in October 2018 and Ethiopian Airlines Flight 302 in March 2019—killed 346 people and revealed systemic failures in engineering ethics, safety culture, and regulatory oversight.
+
+### 2.1 Material Facts
+
+**Technical and System Elements:**
+
+1. MCAS could command nose-down trim using Angle of Attack (AOA) input from a single sensor, creating single-point-of-failure vulnerability.
+
+2. Two crashes involved design certification concerns and training shortcomings related to MCAS nose-down inputs and national transport safety board.
+
+3. Investigators found design certification errors and training shortcomings related to MCAS.
+
+4. Regulators granted the MAX certification, being changed by MCAS; FAA reviewed software before launch.
+
+5. US Justice Department took action against Boeing and the corporate accountability findings were used to determine how the MAX was handled through the OOT report.
+
+### 2.2 Individual Facts
+
+**Personal Decisions and Actions:**
+
+1. In Boeing's 2016 email, chief technical pilot Mark Forkner messaged that MCAS was running rampant in the simulator, indicating prior awareness of system behavior issues.
+
+2. Mark Forkner provided FAA with false information about MCAS, so the system wasn't put in manuals.
+
+3. In Lion Air crash, Captain didn't effectively communicate while training; Pilot wasn't informed of MCAS existence, preventing understanding or overriding erroneous system behavior.
+
+4. In Ethiopian crash, the pilot account investigation notes that Captain & First Officer had very little and insufficient communication and off-duty 737 pilot used expertise to advise crew to disable electrical trim system to regain control.
+
+5. In Flight before Lion crash, an off-duty 737 pilot used his expertise to advise crew to disable electrical trim system.
+
+### 2.3 Organizational Facts
+
+**Corporate and Institutional Elements:**
+
+1. Boeing prioritized schedule and cost over safety concerns, with the US House Committee investigating Boeing's transportation and infrastructure decisions.
+
+2. The organization's designation authorization structure delegated safety certification authority from FAA to Boeing—US Department of Transportation Inspector General found this created conflicts.
+
+3. Boeing management linked employee performance metrics and bonuses to 737 MAX production—New York Times reported this incentive structure.
+
+4. Company's communication and escalation culture discouraged employees from raising safety issues—Reuters investigation documented this pattern.
+
+5. Boeing's competitive strategy against Airbus led executives to promise the MAX would require no simulator training—Wall Street Journal documented this commitment.
+
+### 2.4 Reasonable Assumptions
+
+Based on documented concerns, engineering culture, and the eventual problems discovered, it is reasonable to assume that some Boeing engineers raised concerns about single-sensor dependency and repeated activation risks, but these concerns were either not communicated up the management chain or were overruled due to schedule and cost pressures.
+
+**Supporting Evidence:**
+
+- Internal safety analysis identified catastrophic single-sensor failure scenarios
+- Engineers were knowledgeable about this concern being raised
+- Post-crash investigation revealed erroneous risk of MCAS activation had been identified but not treated as critical
+- Boeing's hierarchical culture discouraged engineers from challenging management decisions and established practices, reinforcing conformity over ethical dissent
+- Boeing's organizational culture and incentives discouraged employees from slowing production or questioning whether standards are actually sufficient for safety
+- Senior management prioritized schedule and certification speed over raising concerns documented by engineers
+- Engineers had access to internal channels to raise safety concerns before external certification
+- Boeing engineers possessed sufficient technical knowledge to understand single-sensor risks
+- Multiple stakeholders (FAA, airlines, pilots) assumed Boeing followed industry-standard redundancy practices
+
+It's unclear what internal pressure influenced engineers to raise concerns about MCAS. Senior management understood likelihood of sensor failure due to oversight in past 737 reliability, underestimated likelihood reported by House committee, which is the same used to determine FAA self-certification was feasible with delay.
+
+### 2.5 Definitional Clarifications
+
+Key terms in this case require clarification as different stakeholders defined them differently, affecting ethical judgments:
+
+**1. Safety**
+
+- **Boeing:** Met FAA regulations and risk for passengers was within acceptable limits
+- **Families:** Zero risk for passengers, moral and legal responsibility to prevent harm
+- **FAA:** Compliance with certification requirements and ongoing regulatory oversight
+- **Ethical Impact:** Compliance vs. moral duty—changes in judgment determine whether meeting minimum regulatory standards is sufficient or if engineers have independent moral obligations.
+
+**2. Accountability**
+
+- **Boeing:** Settlements and corrective actions taken to address systemic issues
+- **Families:** Moral and legal responsibility, criminal prosecution for decision-makers
+- **FAA:** Regulatory oversight responsibilities and enforcement actions
+- **Ethical Impact:** Narrow vs. moral definitions determine who bears responsibility and whether systemic reforms address root causes.
+
+**3. Integrity**
+
+- **Boeing:** Technical honesty and performance in engineering work
+- **Families:** Full transparency about flaws over profit, public accountability
+- **FAA:** Unbiased and pressure-free regulatory oversight
+- **Ethical Impact:** Competence vs. honesty—changes judgment of whether culture that values competitive advantage may pressure employees to minimize disclosure so information is then withheld from public.
+
+**4. Transparency**
+
+- **Boeing:** Legally accurate disclosures meeting regulatory requirements
+- **Families:** Full public sharing of risks in clear, accessible terms
+- **FAA:** Prompt receipt of all necessary technical data and documentation to support effective regulatory oversight
+- **Ethical Impact:** Compliance vs. openness—determines whether transparency requires independent safety prioritization and broader public accountability.
+
+**5. Public Trust**
+
+- **Boeing:** Confidence in brand and reliability based on historical performance
+- **Families:** Trust built on honesty and empathy, moral commitment to passenger safety
+- **FAA:** Trust through rigorous regulation and effective oversight mechanisms
+- **Ethical Impact:** Image vs. moral trust—determines whether reporting would have upheld ethical duty and prevented failure.
+
+---
+
+## Ethical Analysis Framework {#ethical-analysis-framework}
+
+### 3.1 Stakeholder Identification
+
+**Primary Stakeholders (directly affected):**
+- Commercial airline passengers
+- Pilots worldwide
+- Certification engineers at Boeing
+- Families of crash victims
+
+**Secondary Stakeholders:**
+- Airlines
+- FAA regulators
+- Boeing shareholders
+
+**Decision-Makers:**
+- Boeing senior certification engineers
+- Boeing management approving final certification
+
+### 3.2 Ethical Principles and Canons
+
+**Relevant ASME Canons:**
+
+- **Canon 1:** Engineers shall hold paramount the safety, health, and welfare of the public
+- **Canon 2:** Engineers shall perform services only in areas of their competence
+- **Canon 4:** Engineers shall act as faithful agents for employers while avoiding conflicts of interest
+- **Canon 7:** Engineers shall issue public statements only in objective and truthful manner
+
+### 3.3 Conflicts Analysis
+
+Canon 1 (public safety paramount) directly conflicts with Canon 4 (faithful service to Boeing as employer). Engineers faced pressure to certify a system that met regulatory minimums but may not have met public safety maximization.
+
+**Hierarchy Decision:**
+
+Canon 1 takes absolute precedence. ASME interpretation specifically states engineers "shall not approve or seal plans and/or specifications that are not of a design safe to the public health and welfare". This hierarchy is universally applicable—public safety always overrides employer loyalty in life-critical systems.
+
+---
+
+## Practical Constraints on Ethical Decision-Making {#practical-constraints}
+
+Real-world constraints often limit individual agency and complicate ethical decision-making. The following constraints reasonably excused individuals or organizations from following ideal ethical resolutions:
+
+### Issue 1: Ignoring Safety Risks
+
+**Constraint: Organizational pressure and job security**
+
+Engineers feared losing their jobs if they delayed production to address safety concerns. Boeing's culture emphasized schedule adherence and cost control, making refusal to certify MCAS a potential career-ending decision within Boeing's corporate structure.
+
+### Issue 2: Inadequate Testing
+
+**Constraint: Economic schedule constraints**
+
+Tight deadlines, limited budgets, and client demands limited time for testing and validation. Comprehensive testing would have required simulator upgrades and pilot training programs that conflicted with Boeing's commitment to airlines that the MAX would require minimal additional training.
+
+### Issue 3: Withholding Critical Information from Regulators
+
+**Constraint: Culture and organizational norms**
+
+Corporate culture that valued competitive advantage may have pressured employees to minimize disclosure so information was then withheld from the public. Boeing's hierarchical culture discouraged engineers from challenging management decisions and established practices, reinforcing conformity over ethical dissent.
+
+### Issue 4: Delegating Ethical Responsibility to Oversight Agencies
+
+**Constraint: Regulatory ambiguity**
+
+When governmental oversight is inconsistent or delegated, engineers may believe compliance with minimal regulatory satisfactory engineering can prevent questioning whether those standards are actually sufficient for safety. FAA delegation created unclear responsibilities, allowing engineers to assume that meeting regulatory requirements was sufficient even when ethically inadequate.
+
+### Issue 5: Failing to Report Internal Design Flaws
+
+**Constraint: Information silos and limited influence**
+
+Engineers working on specific subsystems may lack visibility into broader system risks. They might feel their input has little weight in raising concerns. Engineers working on subsystems lacked visibility into broader system risks and may have felt their input had minimal impact on final design decisions.
+
+---
+
+## Ethical Resolutions and Justifications {#ethical-resolutions}
+
+Based on the ethical analysis, here are the ideal resolutions for each identified issue and their justifications:
+
+### Issue 1: Should MCAS have been approved despite being faulty?
+
+**Resolution:**
+Boeing certification engineers should have refused to approve MCAS system certification given single-sensor dependency and no pilot notification requirements.
+
+**Stakeholders Affected:** Pilots, airline passengers, regulators
+
+**Applicable ASME Canons:**
+- Canon 1: Public Safety
+- Canon 4: Loyalty
+- Canon 7: Truthful Statements
+
+**Conflicts:** Safety vs. protecting company secrecy
+
+**Hierarchy:** Canon 1 & 7 take precedence—approval should have been delayed until full testing validated performance and safety.
+
+**Justification:**
+Refusing MCAS certification would have prevented deaths while preserving trust in aviation safety systems and engineering professional integrity. This decision would have established precedent that economic and competitive pressures cannot justify compromising fundamental safety standards, ultimately protecting Boeing from the catastrophic long-term financial and reputational damage that resulted from the actual crashes.
+
+### Issue 2: Should MCAS risks have been more transparent to FAA and pilots?
+
+**Resolution:**
+Boeing should have disclosed MCAS to pilots and the FAA more transparently.
+
+**Facts Supporting This Resolution:**
+- Boeing minimized FAA involvement
+- Airlines and pilots were unaware of the system
+- Hidden risks prevented proper training
+
+**Assumptions:**
+Engineers knew transparency was required for certification; FAA relied on Boeing's delegated certification authority.
+
+**Canons:**
+- Canon 1: Safety
+- Canon 2: Competence
+- Canon 7: Truthful communication
+
+**Justification:**
+Full disclosure would have embedded oversight and prevented fatal misunderstandings. Approval should have validated performance and safety through complete testing.
+
+### Issue 3: Should engineers have resisted pressure to accelerate?
+
+**Resolution:**
+Engineers should have resisted organizational pressure to rush certification.
+
+**Facts:**
+- Certification was rushed
+- Engineers were aware of flaws
+- Internal pressure existed
+
+**Assumptions:**
+- Ethical responsibility overrides managerial direction
+- Escalation channels were available
+
+**Canons:**
+- Canon 1: Safety
+- Canon 2: Competence
+
+**Conflict:** Employer pressure vs. safe engineering judgment
+
+**Hierarchy:** Canon 1 outweighs employer demands
+
+**Justification:**
+Resisting pressure would have reinforced professional integrity and prevented unsafe deployment.
+
+### Issue 4: Should FAA have allowed Boeing to self-certify?
+
+**Resolution:**
+The FAA should not have allowed Boeing to self-certify critical safety systems.
+
+**Stakeholders:** FAA, Boeing engineers, public
+
+**Canons:**
+- Canon 1: Safety
+- Canon 4: Loyalty
+- Canon 7: Objectivity
+
+**Conflict:** Efficiency and trust vs. independent safety oversight
+
+**Hierarchy:** Canon 1 & 7 take precedence
+
+**Justification:**
+Independent FAA oversight with external verification requirements would have prevented conflicts of interest and ensured objective safety evaluation.
+
+### Issue 5: Should engineers have reported the pressure that compromised safety standards?
+
+**Resolution:**
+Engineers should have reported organizational pressure that compromised safety.
+
+**Facts:**
+- Management discouraged raising safety concerns
+- Engineers witnessed deviations from standards
+- FAA oversight was lacking
+
+**Assumptions:**
+- Reporting channels existed
+- Silence led to unsafe results
+
+**Canons:**
+- Canon 1 & 7
+
+**Justification:**
+Reporting would have upheld ethical duty and prevented failure.
+
+---
+
+## Lessons Learned and Professional Growth {#lessons-learned}
+
+Through this course and the Boeing 737 MAX case analysis, I developed several key insights about ethical engineering practice that will inform my professional career:
+
+### 1. Ethical Decision-Making Requires Systematic Analysis
+
+The structured framework we practiced—identifying facts, making reasonable assumptions, clarifying definitions, mapping stakeholders, applying ethical principles, and analyzing conflicts—provides a robust methodology for addressing complex ethical dilemmas. This systematic approach prevents reactive decision-making driven by immediate pressures and helps identify the full scope of ethical implications.
+
+### 2. Organizational Culture Shapes Individual Ethical Agency
+
+The Boeing case demonstrated how corporate culture, incentive structures, and hierarchical pressures can create environments where engineers face significant barriers to upholding ethical standards. Understanding these systemic factors is essential—individual moral courage must be supported by organizational structures that value safety over schedule and profit.
+
+### 3. Professional Codes Provide Clear Hierarchy for Conflicts
+
+ASME Canon 1—holding paramount the safety, health, and welfare of the public—takes absolute precedence over employer loyalty, competitive pressures, and economic considerations in life-critical systems. This hierarchy is not negotiable and provides clear ethical guidance even when organizational pressures push in different directions.
+
+### 4. Transparency and Communication Are Ethical Imperatives
+
+The failure to disclose MCAS functionality to pilots and regulators exemplified how information asymmetries create safety hazards. Engineers have ethical obligations not just to design safe systems but to ensure all stakeholders have the information needed to use systems safely and make informed decisions.
+
+### 5. Regulatory Compliance Does Not Equal Ethical Practice
+
+Meeting minimum regulatory requirements, particularly when regulators delegate oversight to industry, does not fulfill engineers' independent ethical obligations. Engineers must exercise professional judgment about safety that goes beyond compliance with potentially inadequate or ambiguous regulations.
+
+### Application to Future Career
+
+As I pursue work in robotics and autonomous systems, these lessons are directly applicable. Autonomous systems raise similar ethical questions: How much risk is acceptable? What level of transparency do users need? How should we balance innovation speed with safety validation? When do commercial pressures compromise safety imperatives?
+
+I commit to applying the analytical frameworks from this course—systematic fact-gathering, stakeholder analysis, principled reasoning, and transparent communication—to ensure my engineering work upholds the highest ethical standards. I recognize that ethical practice requires both individual integrity and organizational structures that support engineers in prioritizing public safety over competing pressures.
+
+---
+
+## Conclusion {#conclusion}
+
+The Boeing 737 MAX case represents a comprehensive failure of engineering ethics at individual, organizational, and systemic levels. Through detailed analysis of this case, I have developed frameworks for identifying ethical issues, analyzing stakeholder impacts, applying professional codes, and navigating the practical constraints that complicate ethical decision-making in professional practice.
+
+The fundamental lesson is that ethical engineering practice extends beyond technical competence to encompass moral courage, systematic analysis of ethical implications, transparent communication with stakeholders, and commitment to public safety that transcends organizational pressures and regulatory minimums. Engineers must actively consider the broader implications of their work and commit to upholding professional obligations even when doing so creates personal or organizational costs.
+
+The analytical skills and ethical frameworks developed through MAE 4300 will be essential throughout my engineering career. As technologies become more complex and autonomous systems take on greater roles in safety-critical applications, the need for rigorous ethical reasoning grows correspondingly. I am committed to applying these principles in my professional work, contributing to an engineering culture that values transparency, accountability, and unwavering commitment to public welfare.
+
+This portfolio represents not just a retrospective analysis but a foundation for future professional practice. The Boeing 737 MAX tragedies demonstrate the catastrophic consequences when ethical obligations are subordinated to competitive and financial pressures. By internalizing these lessons and committing to systematic ethical reasoning, I aim to contribute to engineering practice that earns and maintains public trust through demonstrated commitment to safety, transparency, and professional integrity.
